5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1613_1800.log
== TEST (2019-04-04 18:53:12) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))

print(round(a**2+b**2+c**2/a+b+c))
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:54:16) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))

print(round(x,7(a**2+b**2+c**2/a+b+c))
-- ERROR:
File "XXXX", line 6
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:54:45) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))

round(x,7)
print(a**2+b**2+c**2/a+b+c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(x,7)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:54:57) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))

round(abc,7)
print(a**2+b**2+c**2/a+b+c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    round(abc,7)
NameError: name 'abc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:55:35) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))


print(round,7(a**2+b**2+c**2/a+b+c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round,7(a**2+b**2+c**2/a+b+c))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:00:26) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))


print(round(a**2+b**2+c**2))/(a+b+c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(a**2+b**2+c**2))/(a+b+c)
TypeError: unsupported operand type(s) for /: 'NoneType' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:02:38) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))


total=(a**2+b**2+c**2)/(a+b+c)
print(round(total,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:02:52) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))


total=(a**2+b**2+c**2)/(a+b+c)
print(round(total,7))
-- EXECUTION TIME:
0.132918
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:03:00) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))


total=(a**2+b**2+c**2)/(a+b+c)
print(round(total,7))
-- EXECUTION TIME:
0.198985
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
25.6666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:03:00) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))


total=(a**2+b**2+c**2)/(a+b+c)
print(round(total,7))
-- EXECUTION TIME:
0.143076
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
25.6666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:03:01) 
-- CODE:
a=float(input("digite o valor:"))
b=float(input("digite o valor:"))
c=float(input("digite o valor:"))


total=(a**2+b**2+c**2)/(a+b+c)
print(round(total,7))
-- EXECUTION TIME:
0.242882
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
